[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/AIBot.gd" type="Script" id=1]
[ext_resource path="res://menus/MenuBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://chatbot_icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menus/LineEditJS/LineEditJS.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[node name="AIBot" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuBase" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="BackButton" parent="MenuBase" index="6"]
visible = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 80.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 150.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="Label2" type="Label" parent="ColorRect"]
self_modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
margin_left = 50.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 70.0
text = "Hi there! I'm so excited to be playing this game with you. So, what's the most recent code you received?"
autowrap = true

[node name="chatbot_icon2" type="Sprite" parent="ColorRect"]
position = Vector2( 10, 60 )
texture = ExtResource( 3 )

[node name="InputCode" type="LineEdit" parent="."]
margin_left = 130.0
margin_top = 310.0
margin_right = 327.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "code"
script = ExtResource( 5 )

[node name="Button" type="Button" parent="InputCode"]
margin_left = 210.0
margin_right = 300.0
margin_bottom = 30.0
text = "Chat"

[node name="ResponseMessage" type="ColorRect" parent="."]
margin_left = 80.0
margin_top = 170.0
margin_right = 420.0
margin_bottom = 296.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="Label" type="Label" parent="ResponseMessage"]
self_modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
margin_left = 50.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 120.0
text = "Hi there! I'm so excited to be playing this game with you. So, what's the most recent code you received?"
autowrap = true

[node name="chatbot_icon" type="Sprite" parent="ResponseMessage"]
position = Vector2( 8, 110 )
texture = ExtResource( 3 )

[node name="OutputCode" type="LineEdit" parent="ResponseMessage"]
margin_left = 58.0
margin_top = 87.0
margin_right = 305.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
align = 1
editable = false
script = ExtResource( 5 )
[connection signal="pressed" from="MenuBase/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="InputCode/Button" to="." method="_on_Button_pressed"]

[editable path="MenuBase"]
